--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                         <div class="folio-item__cat">illustration/Commission 2024</div>
                                         <h4 class="folio-item__title"> Fami!</h4>
                                      </div>
-                                     <a target=”blank” href="https://x.com/shirozu07/status/1832947875682177117" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                     <a target=”blank” href="https://x.com/shirozu07/status/1752175524947128688?s=19" title="Twitter" class="folio-item__project-link">Twitter</a>
                                      <div class="folio-item__caption">
                                         <p>Fami</p>
                                     </div>
